@@ -74,6 +74,10 @@ def register():
         One2ManySizeTarget,
         One2ManySizePYSON,
         One2ManySizePYSONTarget,
+        One2ManyFilter,
+        One2ManyFilterTarget,
+        One2ManyFilterDomain,
+        One2ManyFilterDomainTarget,
         Many2Many,
         Many2ManyTarget,
         Many2ManyRelation,
@@ -88,6 +92,12 @@ def register():
         Many2ManySizeRelation,
         Many2ManyTree,
         Many2ManyTreeRelation,
+        Many2ManyFilter,
+        Many2ManyFilterTarget,
+        Many2ManyFilterRelation,
+        Many2ManyFilterDomain,
+        Many2ManyFilterDomainTarget,
+        Many2ManyFilterDomainRelation,
         Reference,
         ReferenceTarget,
         ReferenceRequired,
